--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,36 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: 'Poppins', sans-serif;
   }
+
+  /* ===================== ESTERIZACAO GERAL ==================== */
+
+  body {
+    font-family: 'Poppins', sans-serif;
+  }
+
+  .btn {
+    font-size: 16px;
+    padding: 12px 22px;
+    background-color: rgb(40, 113, 122);
+    color: #FFF;
+    border-radius: 20px;
+    border: 1px solid #079ea6;
+    transition: 0.5s ease;
+    cursor: pointer;
+  }
+
+  .btn:hover {
+    transform: scale(1.05);
+  }
+
+  .container {
+    max-width: 1024px;
+    margin: auto;
+  }
+
+  /* ==================== MENU =================== */
 
   nav {
     display: flex;
@@ -25,7 +54,7 @@
   .nav-links {
     display: flex;
     justify-content: space-around;
-    width: 30%;
+    width: 43%;
   }
 
   .nav-links a {
@@ -48,7 +77,463 @@
     transition: all 0.3s ease;
   }
 
- 
+
+
+/* ==================== HEADER ==================*/
+
+.header {
+  height: calc(100vh - 8vh);
+} 
+
+.head {
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+}
+
+.head-left {
+  padding: 10px;
+  margin-top: 60px;
+}
+
+.head .head-left h3 {
+  font-weight: 500;
+  margin-top: 80px;
+  font-size: 20px;
+  color: rgb(68, 65, 65);
+}
+
+.head .head-left h1 {
+  margin-top: 10px;
+  color: rgb(40, 113, 122);
+  font-size: 40px;
+}
+
+.head .head-left p {
+  padding: 30px 0;
+  color: #81876c;
+  font-size: 16px;
+  line-height: 1.5rem;
+}
+
+
+
+/* ==================== ABOUT ==================*/
+
+.about {
+  margin-top: 40px;
+  padding: 70px 0;
+}
+
+.about h2 {
+  padding-bottom: 30px;
+  text-align: center;
+  font-size: 20px;
+  color: rgb(40, 113, 122);
+  text-transform: uppercase;
+}
+
+.about-all {
+  display: grid;
+  grid-template-columns: 40% 55%;
+  gap: 5%;
+}
+
+.about-all .about-left {
+  background-color: rgb(40, 113, 122);
+  border-radius: 20px;
+}
+
+.about-all .about-left:hover {
+  background-color: transparent;
+  transition: 300ms ease-in-out;
+  transform: rotate(10deg);
+}
+
+.about-all .about-left img {
+  width: 400px;
+  height: 400px;
+}
+
+.about-right .about-items {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.about-right .about-item {
+  color: #FFF;
+  padding: 20px;
+  text-align: center;
+  background-color: rgb(40, 113, 122);
+  border-radius: 20px;
+}
+
+.about-right .about-item:hover {
+  color: #000;
+  background-color: transparent;
+  transition: 0.5s ease;
+  border: 1px solid rgb(40, 113, 122);
+}
+
+.about-all .about-right h3 {
+  font-size: 13px;
+}
+
+.about-all .about-right i {
+  font-size: 20px;
+}
+
+.about-all .about-right p {
+  padding: 30px 0;
+  color: #81876c;
+  font-size: 16px;
+  line-height: 1.5rem;
+}
+
+
+
+/* ==================== EXPERIENCIA ==================*/
+
+.experience h2 {
+  text-align: center;
+  margin: 40px 0;
+  font-size: 20px;
+  color: rgb(40, 113, 122);
+}
+
+.experience-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+}
+
+.experience-container > div {
+    background: rgb(40, 113, 122);
+    color: #FFF;
+    padding: 2.4rem 5rem;
+    border-radius: 2rem;
+    border: 1px solid transparent;
+    transition: 300ms ease-in-out;
+}
+
+.experience-container > div:hover {
+    background: transparent;
+    border-color: rgb(40, 113, 122);
+    cursor: default;
+    color: #000;
+}
+
+.experience-container > div h3 {
+    text-align: center;
+    margin-bottom: 2rem;
+    color: #FFF;
+}
+
+.experience-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 2rem;
+}
+
+.experience-details {
+    display: flex;
+    gap: 1rem;
+}
+
+.experience-details-icon {
+    margin-top: 6px;
+    color: #FFF;
+}
+
+.experience-details-icon:hover {
+    color: #000;
+}
+
+
+
+/* ====================== SERVICES ===================== */
+
+.services {
+  margin: 90px 0;
+}
+
+.services h2 {
+  margin: 40px 0;
+  text-align: center;
+  color: rgb(40, 113, 122);
+}
+
+.service {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 15px;
+}
+
+.service .service-items {
+  background-color: #FCF9F8;
+  border-radius: 5px 5px 20px 20px;
+  border: 1px solid rgb(40, 113, 122);
+}
+
+.service .service-item {
+  text-align: center;
+  padding: 20px;
+  color: #FFF;
+  border-radius: 0px 0px 20px 20px;
+  background-color: rgb(40, 113, 122);
+  transition: 300ms ease;
+}
+
+.service .service-item:hover {
+  background-color: transparent;
+  color: #000;
+  border: 1px solid #ccc;
+}
+
+.service .service-info {
+  padding: 30px;
+}
+
+.service .service-info h3 {
+  font-size: 16px;
+  color: #81876c;
+  line-height: 30px;
+  padding-left: 10px;
+}
+
+
+
+/* ====================== PORTIFOLIO ===================== */
+
+.port {
+  margin-top: 40px;
+}
+
+.port h3 {
+  text-align: center;
+  margin-bottom: 40px;
+  color: rgb(40, 113, 122);
+  font-size: 20px;
+}
+
+.port .port-area {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+
+.port .port-area .port-item {
+  background-color: #FCF9F8;
+  padding: 10px;
+  border-radius: 20px;
+  border: 1px solid #FCF9F8;
+  transition: 300ms ease-in-out;
+}
+
+.port .port-area .port-item:hover {
+  background-color: transparent;
+  border: 1px solid rgb(40, 113, 122);
+}
+
+.port .port-area img {
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.port .port-area .port-item h3 {
+  text-align: center;
+  color: rgb(41, 42, 43);
+  font-size: 16px;
+}
+
+.port .port-area .port-item .port-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+   padding: 5px 0;
+}
+
+/* ====================== CONCTATO ===================== */
+
+.contact {
+  margin: 80px 0;
+}
+
+.contact h2 {
+  margin: 40px 0;
+  font-size: 20px;
+  color: rgb(40, 113, 122);
+  text-align: center;
+}
+
+.contact .contact-area {
+  display: grid;
+  grid-template-columns: 30% 58%;
+  gap: 12%;
+}
+
+.contact .contact-item {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+
+
+.contact-item .contact-option {
+  background: rgb(40, 113, 122);
+  color: #fff;
+  padding: 30px 10px;
+  border-radius: 1.2rem;
+  text-align: center;
+  border: 1px solid transparent;
+  transition: 300ms ease-in-out;
+}
+
+.contact-item .contact-option h5 {
+  margin: 10px 0;
+}
+
+.contact-item .contact-option:hover {
+  background: transparent;
+  border-color: rgb(40, 113, 122);
+  color: #000;
+}
+
+.contact-item .contact-option i {
+  font-size: 1.5rem;
+}
+
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+}
+
+input,
+textarea {
+    width: 100%;
+    padding: 1.5rem;
+    border-radius: 0.5rem;
+    background: transparent;
+    border: 2px solid rgb(40, 113, 122);
+    resize: none;
+    color: #000;
+}
+
+
+
+/* ====================== RODAPE ===================== */
+
+footer {
+    background: rgb(40, 113, 122);
+    padding: 3ren 0;
+    text-align: center;
+    font-size: 0.9rem;
+    margin-top: 40px;
+}
+
+footer a {
+    color: #FFF; 
+}
+
+.footer-logo {
+    font-size: 2rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+    display: inline-block;
+}
+
+.perma-link {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    margin: 0 auto 3rem;
+}
+
+.perma-link a:hover {
+    color: var(--color-primary);
+}
+
+.footer-socials {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-bottom: 4rem;
+}
+
+.footer-socials a {
+    background: #FFF;
+    font-size: 15px;
+    color: #000;
+    padding: 0.8rem;
+    border-radius: 0.7rem;
+    display: flex;
+    border: 1px solid transparent;
+}
+
+.footer-socials a:hover {
+    background: transparent;
+    color: #FFF;
+    border-color: #FFF;
+}
+
+.footer-copyright {
+    margin-top: 4rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -59,7 +544,73 @@
     .nav-links {
       width: 60%;
     }
+
+    .head {
+      margin-top: 30px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 5px;
+      margin: 0 60px;
+    }
+
+    .about {
+      margin-top: 60px;
+      padding: 70px 0;
+      margin: 0 60px;
+    }
+
+    .about-all .about-left img {
+      width: 350px;
+      height: 350px;
+    }
+
+    .experience-container {
+        grid-template-columns: 1fr;
+    }
+
+    .experience-container > div {
+        width: 80%;
+        padding: 2rem;
+        margin: 0 auto;
+    }
+
+    .experience-content {
+        padding: 1rem;
+    }
+
+    .services {
+      margin: 0 60px;
+    }
+
+    .port {
+      margin: 40px 60px;
+    }
+
+    .port .port-area .port-item {
+      background-color: #FCF9F8;
+      padding: 5px;
+      border-radius: 20px;
+      border: 1px solid #FCF9F8;
+      transition: 300ms ease-in-out;
+    }
+
+    .port .port-area img {
+      width: 270px;
+      height: 170px;
+      object-fit: cover;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .contact {
+      margin: 0 60px;
+    }
+
+
+
   }
+
+
 
 
   @media screen and (max-width:768px) {
@@ -120,8 +671,161 @@
   }
 
 
+
+
   @media screen and (max-width: 768px) {
     .nav-links.nav-active li {
       opacity: 1;
     }
+
+    .head {
+      text-align: center;
+      margin: 0 120px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      margin-bottom: 100px;
+    }
+
+    .head img {
+      display: none;
+    }
+
+    .about {
+      margin: 0 200px;
+    }
+
+    .about-all {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
+
+    .about-right .about-item {
+      padding: 10px;
+  
+    }
+
+    .service {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+    }
+
+    .port .port-area {
+      grid-template-columns: 1fr 1fr;
+      gap: 2rem;
+    }
+
+    .contact .contact-area {
+      grid-template-columns: 1fr;
+      gap: 12%;
+    }
+    
+
   }
+
+
+
+  @media screen and (max-width: 480px) {
+
+    .head {
+      text-align: center;
+      margin: 0 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      margin-bottom: 100px;
+    }
+
+    .about {
+      margin: 0 30px;
+    }
+
+    .about-all .about-left {
+      width: 275px;
+      height: 275px;
+    }
+
+    .about-all .about-left img {
+      width: 275px;
+      height: 275px;
+    }
+
+    .about-right .about-item {
+      font-size: 12px;
+      padding: 10px 8px;
+    }
+
+    .about-all .about-right h3 {
+      font-size: 10px;
+    }
+
+    .experience-container {
+      gap: 1rem;
+    }
+
+    .experience-container > div{
+      padding: 10px 20px;
+    }
+
+    .experience-container > div h4 {
+      font-size: 13px;
+    }
+
+    .experience-container > div small {
+      font-size: 10px;
+    }
+       
+    .service {
+      grid-template-columns: 1fr;
+      gap: 15px;
+    }
+
+    .service .service-items {
+      margin: auto;
+    }
+
+    .service .service-items h3 {
+      font-size: 13px;
+      margin: auto;
+    }
+
+    .service .service-info {
+      padding: 10px;
+    }
+
+    .port .port-area {
+      grid-template-columns: 1fr;
+      gap: 2rem;
+    }
+
+    .port .port-area .port-item {
+      padding: 10px;
+      margin: 10px;
+    }
+
+    .port .port-area img {
+      width: 200px;
+      height: 100px;
+      object-fit: cover;
+    }
+
+
+    .perma-link {
+      flex-direction: column;
+      gap: 1.5rem;
+   }
+
+    .footer-socials {
+      margin-bottom: 2.6rem;
+   }
+
+   footer {
+    margin-top: 140px;
+   }
+    
+  }
+
